# wgcon

./: .gitignore  CMakeLists.txt  README.md  wgcon.cpp
deb/: wgcon_1.0-1_amd64.deb
